# Website-Travel-Planner

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
notifications/: models.py  tasks.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
reviews/: forms.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_unique_together.py
routes/: forms.py  models.py  urls.py  views.py
routes/migrations/: 0001_initial.py
static/css/: global.css
static/js/: toast.js
templates/: base.html  home.html
templates/include/: header.html  toach.html
templates/notifications/: notification_list.html
templates/registration/: login.html  register.html
templates/routes/: route_detail.html  route_form.html  route_list.html
travel_planner/: celery.py  settings.py  urls.py
users/: backends.py  forms.py  models.py  ulrs.py  urls.py  views.py
users/migrations/: 0001_initial.py
