[project]
name = "travel-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "Showeelik",email = "zeezxex2006@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "django-celery-results (>=2.5.1,<3.0.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
mypy = "^1.14.1"
isort = "^6.0.0"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"

